Please be more consistent

--- a/3C4_Explosion/3C4_Explosion/MainWindow.xaml
+++ b/3C4_Explosion/3C4_Explosion/MainWindow.xaml
@@ -10,7 +10,7 @@
         FontSize="30">
     <StackPanel>
         <WrapPanel Margin="5">
-            <TextBlock Width="300">Id</TextBlock>
+            <TextBlock Width="300">ID</TextBlock>
             <TextBox x:Name="TextBoxId" Width="300"></TextBox>
         </WrapPanel>
         <WrapPanel Margin="5" Background="LightCoral">
