--- a/3C4_Explosion/3C4_Explosion/MainWindow.xaml
+++ b/3C4_Explosion/3C4_Explosion/MainWindow.xaml
@@ -11,7 +11,6 @@
     <StackPanel>
         <WrapPanel Margin="5">
             <TextBlock Width="300">ID</TextBlock>
-            <TextBox x:Name="TextBoxId" Width="300"></TextBox>
         </WrapPanel>
         <WrapPanel Margin="5" Background="LightCoral">
             <TextBlock Width="300">Name</TextBlock>
@@ -23,7 +22,15 @@
         </WrapPanel>
         <WrapPanel Margin="5" Background="LightCoral">
             <TextBlock Width="300">Email</TextBlock>
-            <TextBox x:Name="TextBoxEmail" Width="300"></TextBox>
+            <TextBox x:Name="TextBoxEmail" Width="3300"></TextBox>
+        </WrapPanel>
+        <WrapPanel Margin="5" Background="LightBlue">
+            <TextBlock Width="300">Address</TextBlock>
+            <TextBox x:Name="TextBoxAddress" Width="300"></TextBox>
+        </WrapPanel>
+        <WrapPanel Margin="5" Background="LightttBlue">
+            <TextBlock Width="300">Address</TextBlock>
+            <TextBox x:Name="TextBoxAddress" Width="300"></TextBox>
         </WrapPanel>
         <WrapPanel Margin="5" Background="LightBlue">
             <TextBlock Width="300">Address</TextBlock>
